# Fax

./: .gitignore  README.md
backend/: pyproject.toml
backend/fax/: db.sqlite3  manage.py
backend/fax/apps/account/: admin.py  models.py
backend/fax/apps/account/migrations/: 0001_initial.py  0002_user_chats.py  0003_remove_user_chats.py
backend/fax/apps/api/: mixin.py  serializers.py  urls.py  views.py
backend/fax/apps/chat/: admin.py  models.py
backend/fax/apps/chat/migrations/: 0001_initial.py
backend/fax/fax/: asgi.py  settings.py  urls.py  wsgi.py
frontend/fax/: README.md  package-lock.json  package.json
frontend/fax/public/: index.html
frontend/fax/src/: App.vue
